# octave-dicom

./: .gitignore  .hgignore  .hgtags  DESCRIPTION  INDEX  Makefile  NEWS  README.md  _config.yml  octave-dicom.metainfo.xml
dicom/: functions.md  index.md  manual.md  news.md
dicom/functions/: dicomCollection.md  dicomanon.md  dicomdict.md  dicomdisp.md  dicomfind.md  dicominfo.md  dicomlookup.md  dicomread.md  dicomuid.md  dicomupdate.md  dicomwrite.md  images.dicom.decodeUID.md  images.dicom.parseDICOMDIR.md  isdicom.md
doc/: dicom.texi  mkfuncdocs.py
inst/: PKG_ADD  PKG_DEL  __load_dicom__.m  __unload_dicom__.m  dicomCollection.m  dicomfind.m  dicomupdate.m  isdicom.m  octavedicom.dic
inst/+images/+dicom/: decodeUID.m  parseDICOMDIR.m
src/: Makefile  Makefile.in  __dicom_decodeuid__.cpp  __dicom_stat__.cpp  _gendicomdict.cpp  bootstrap  configure.ac  dicomanon.cpp  dicomdict.cpp  dicomdict.h  dicomdisp.cpp  dicominfo.cpp  dicomlookup.cpp  dicomread.cpp  dicomuid.cpp  dicomwrite.cpp  isdicom.cpp
src/m4/: cmake.m4
